syntax="proto3";

option java_package="com.proto.commissions";
option java_multiple_files=true;

message AddCommissionRequest{
  Commission commission=1;
}

message AddCommissionResponse{
  string result=1;
}

message GetCommissionsRequest{
  int32 userId=1;
}

message GetCommissionsResponse{
  repeated CommissionWithDetails commissions=1;
}

message Commission{
  int32 UserId=1;
  int32 productId=2;
  float totalPrice=4;
}
message CommissionWithDetails{
  float totalPrice=1;
  string productName=2;
  int32 quantity=3;
  int32 productId=4;
  int32 userId=5;
}

service CommissionServer{
  rpc addCommission(AddCommissionRequest) returns (AddCommissionResponse){};
  rpc getCommissions(GetCommissionsRequest) returns (GetCommissionsResponse);
}
